hphp/test/zend/good/Zend/tests/dereference_010.php.expectf
NULL
NULL

Fatal error: Object does not implement ArrayAccess in %s/dereference_010.php on line 17
